--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,11 +1,20 @@
 @import "~bootstrap/scss/bootstrap";
 
-body {
-    background-color: lightcoral;
+.row {
+    > * {
+        height: 100vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        color: lightcoral;
+        background-color: aquamarine;
+        background-image: url('../img/laravel.png');
+        background-size: 50px 50px;
+    }
 }
 
-.gatto {
-    width: 300px;
-    height: 300px;
-    background-image: url('../img/gatto.jpg');
+img {
+    max-height: 700px;
 }
